@@ -1,0 +1,13 @@
+// PR c++/39109
+
+struct N
+{
+  private:
+    virtual ~N ();
+};
+
+N *
+foo ()
+{
+  return new N ();
+}
